@@ -1,7 +1,5 @@
 package org.opentdk.api.util;
 
-import org.apache.commons.lang3.StringUtils;
-
 import java.nio.charset.Charset;
 
 /**
@@ -16,7 +14,7 @@ public class StringUtil {
 	 * @return The UNICODE transformation or null, if the input string is null, empty or too large.
 	 */
 	public static String toUnicode(String toConvert) {
-		if(StringUtils.isBlank(toConvert) || toConvert.length() > Short.MAX_VALUE) {
+		if(toConvert.isBlank() || toConvert.length() > Short.MAX_VALUE) {
 			return null;
 		}
 		return new String(toConvert.getBytes(), Charset.defaultCharset());
@@ -27,7 +25,7 @@ public class StringUtil {
 	 * @return The regular expression transformation or null, if the input string is null, empty or too large.
 	 */
 	public static String stringToRegEx(String inStr) {
-		if(StringUtils.isBlank(inStr) || inStr.length() > Short.MAX_VALUE) {
+		if(inStr.isBlank() || inStr.length() > Short.MAX_VALUE) {
 			return null;
 		}		
 		String regexStr = inStr.replace("\"", "\\\"");
@@ -45,7 +43,7 @@ public class StringUtil {
 	 * @return The literal expression transformation or null, if the input string is null, empty or too large.
 	 */
 	public static String regExToString(String inStr) {
-		if(StringUtils.isBlank(inStr) || inStr.length() > Short.MAX_VALUE) {
+		if(inStr.isBlank() || inStr.length() > Short.MAX_VALUE) {
 			return null;
 		}	
 		String normalStr = inStr.replace("\\\"", "\"");
@@ -63,7 +61,7 @@ public class StringUtil {
 	 * @return A string with all double backslashes replaced by single ones or null, if the input string is null, empty or too large.
 	 */
 	public static String replaceDoubleBackslashes(String regex) {
-		if(StringUtils.isBlank(regex) || regex.length() > Short.MAX_VALUE) {
+		if(regex.isBlank() || regex.length() > Short.MAX_VALUE) {
 			return null;
 		}	
 		return regex.replaceAll("\\\\\\\\", "\\\\");
@@ -74,7 +72,7 @@ public class StringUtil {
 	 * @return A string with all enclosing quotes removed or null, if the input string is null, empty or too large.
 	 */
 	public static String removeEnclosingQuotes(String inStr) {
-		if(StringUtils.isBlank(inStr) || inStr.length() > Short.MAX_VALUE) {
+		if(inStr.isBlank() || inStr.length() > Short.MAX_VALUE) {
 			return null;
 		}
 		String clearedString = inStr.replaceAll("\\A[ ]*\"", ""); // remove opening quotes
